Fix block quote styling on mobile

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -180,8 +180,12 @@ blockquote {
   padding: 25px ;
 
   @media ($phone) {
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+
+  @media ($phone) {
     padding-right: 0;
-    padding-right: 25;
   }
 
   p:first-of-type {
